syntax = "proto3";

option csharp_namespace = "WebApplication1.Grpc"; // À adapter

// Message UserEntity
message UserEntity {
    string userName = 1;
    int64 score = 2;
}

// Pour la requête d’ajout/mise à jour
message UpsertScoreRequest {
    UserEntity user = 1;
}

// Pour la réponse d’ajout/mise à jour (tu peux renvoyer l’entité créée)
message UpsertScoreResponse {
    UserEntity user = 1;
}

// Pour la requête GetScores (pas de paramètre)
message GetScoresRequest {}

// Pour la réponse GetScores (liste d’utilisateurs)
message GetScoresResponse {
    repeated UserEntity users = 1;
}

// Définition du service
service LeaderboardService {
    rpc UpsertScore(UpsertScoreRequest) returns (UpsertScoreResponse);
    rpc GetScores(GetScoresRequest) returns (GetScoresResponse);
}
